--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
                         </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="/article/new">Create an article</a>
+                        <a class="nav-link" href="/addArticle">Create an article</a>
                         </li>
                     </ul>
                     </div>
