Adding some files

--- a/templates/doctrine_learning/index.html.twig
+++ b/templates/doctrine_learning/index.html.twig
@@ -10,6 +10,7 @@
 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
+    <h2>{{ path('deleteArticle') }}</h2>
 
     This friendly message is coming from:
     <ul>
